# PGC

./: .gitignore  README.md  SETUP_CHECKLIST.md
.github/workflows/: ci.yml  pgc-windows.yml
Logos/: Persimia_logo_RGB.eps  Persimia_logo_horizontal_RGB.eps  Persimia_mark_RGB.eps
box/: README.md
docs/: gcs_design_document.md  qgc_mission_planning_inventory.md
mission_engine/: build-exe.ps1  demo.mission  demo.plan  demo.waypoints  mission-engine.spec  pyinstaller_entry.py  pyproject.toml
mission_engine/examples/: site_fences.kml  solar_farm.plan  solar_farm_params.json
mission_engine/mission_engine/adapters/: cli.py
mission_engine/mission_engine/core/: fences.py  geometry.py  params.py  plan_io.py  survey.py
mission_engine/tests/: test_fences.py  test_geometry.py  test_params.py  test_plan_io_and_cli.py  test_survey.py
qgc-overlay/: README.md  apply-patches.ps1  sync-to-qgc.ps1
qgc-overlay/custom/: CMakeLists.txt  custom.qrc
qgc-overlay/custom/cmake/: CustomOverrides.cmake
qgc-overlay/custom/deploy/windows/: PGC.rc
qgc-overlay/custom/res/: PGCSolarScanEditor.qml  PGCSolarScanMapVisual.qml
qgc-overlay/custom/src/: CustomPlugin.cc  CustomPlugin.h  PGCSolarScanItem.cc  PGCSolarScanItem.h
qgc-overlay/patches/: 0001-pin-px4-gpsdrivers.patch  0002-backport-createComplexMissionItem-hook.patch  0003-unfinal-survey-virtuals-for-solar-scan.patch
qgc-overlay/test-assets/: demo_admin_building.kml  demo_inverter_yard.kml  demo_keepout.kml  demo_pond.kml  demo_powerline.kml  demo_site_boundary.kml
